Remove AWS SDK utilities and AssertJ dependencies